# cpp_empty_project

./: CMakeLists.txt
src/: CMakeLists.txt  Main.cpp
tests/: CMakeLists.txt  MainAllTests.cpp  TestExample.cpp
